# fanucpy

./: CITATION.cff  README.md  fanuc.md  pyproject.toml
examples/: ArucoTrackingApp.py  PickAndPlaceApp.py
examples/fanucpy-gpt/: README.MD  demo.py  reference.py
examples/voice-commands/: README.md  demo.py  initial-messages.json
src/: Robot.py  demo.py
src/fanuc-driver/: mappdk.ls  mappdk_cmd.kl  mappdk_comm.kl  mappdk_logger.kl  mappdk_logger.pc  mappdk_move.ls  mappdk_movel.ls  mappdk_server.kl  mappdk_server.pc  mappdk_utils.kl
src/fanucpy/: Calibration.py  Robot.py  RobotApp.py  Transformations.py  __init__.py  calibration.py  robot.py  robotapp.py  transformations.py
