[tool.poetry]
name = "fanucpy"
version = "0.1.5"
description = "Python package for FANUC industrial robots"
authors = ["Agajan Torayev <torayeff@gmail.com>"]
repository = "https://github.com/torayeff/fanucpy"
readme = 'README.md'
keywords = ["fanuc", "industrial robot", "robotic apps"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.0"
numpy = "^1.22.3"
opencv-contrib-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
