[tool.poetry]
name = "fanucpy"
version = "0.1.14"
description = "Python package for FANUC industrial robots"
authors = ["Agajan Torayev <torayeff@gmail.com>"]
repository = "https://github.com/torayeff/fanucpy"
readme = 'README.md'
keywords = ["fanuc", "industrial robot", "robotic apps"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8"
scipy = "^1.10.0"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
